Creado DTO para el registro del usuario evitar sacar token en respuesta.
Se añade politica de contraseñas.

Se modifican los DTOs para varible Environment environment para evitar que se introduzcan otros que no esten en el Enum.

Se integran los cambios de Javi para el filtro de busqueda de features con las modificaciones correspondientes y la validacion para que no devuelva 200 vacio. Se valida que el nombre de la feature exista